<resources>
    <string name="title_application_name" translatable="false">PimiMatch</string>
    <string name="app_name" translatable="false">Pimi</string>
    <string name="state_title_game">Игра</string>
    <string name="state_title_settings">Настройки</string>
    <string name="state_title_loading">Загрузка…</string>
    <string name="state_title_result">Очки</string>
    <string name="state_title_match_settings">Настройки матча</string>
    <string name="empty">     </string>
    <string name="landing_start_button">Начнём!</string>
    <string name="landing_start_salut" translatable="false">HOLA!\nSALUT!\nBAREV!</string>
    <string name="landing_accept">Понятно!</string>
    <string name="landing_language_select">Выбери язык\nдля изучения</string>
    <string name="landing_mtw_header">Составляй\nпары из слов</string>
    <string name="landing_tof_header">Определи\nправильно ли</string>
    <string name="landing_oof_header">Выбери\nодин вариант</string>
    <string name="landing_wtw_header">Напиши\nперевод слова</string>
    <string name="landing_mtw_text">Получай очки за каждую\nправильную пару</string>
    <string name="landing_tof_text">Получай очки за каждое слово</string>
    <string name="landing_oof_text">Получай очки за каждое слово</string>
    <string name="landing_wtw_text">Получай очки за каждое слово</string>
    <string name="landing_start_game">Начать</string>
    <string name="landing_options_game">Настроить игру</string>
    <string name="end_game_phrase_win">Победа!</string>
    <string name="end_game_phrase_loose">Провал!</string>
    <string name="score_text" translatable="false">%d</string>
    <string name="report_sent">Сообщение отправлено</string>
    <string name="words_saved">Слова сохранены в словарь</string>
    <string name="button_new_game">Главное меню</string>
    <string name="button_to_settings">Настройки</string>
    <string name="button_restart_round">Повтор</string>
    <string name="eg_errors">ошибок</string>
    <string name="eg_points">очков</string>
    <string name="eg_words">слов</string>
    <string name="eg_congrats">Вау! Потрясающая игра</string>
    <string name="eg_sorrow">Ой! В следующий раз\nполучится лучше</string>
    <string name="select_game">Выбери игру</string>
    <string name="MTW">Найди\nпару</string>
    <string name="ROW">Да/Нет</string>
    <string name="MC">Выбери\nВерное</string>
    <string name="WTW">Собери\nСлово</string>
    <string name="selected_groups_label">Группы слов для игры:</string>
    <string name="game_group_label">Группа для игры:</string>
    <string name="game_no_groups_selected">Группы не выбраны — зайди в настройки</string>
    <string name="clear_forced_group">Сбросить выбранную группу</string>
    <string name="games">Игры</string>
    <string name="score">Прогресс</string>
    <string name="settings">Опции</string>
    <string name="words">Словарь</string>
    <string name="tof_yes">Да</string>
    <string name="tof_no">Нет</string>
    <string name="tof_correct">Правильно</string>
    <string name="tof_wrong">Неправильно</string>
    <string name="ingame_origin">Оригинал</string>
    <string name="ingame_translate">Перевод</string>
    <string name="ingame_dots" translatable="false">...</string>
    <string name="exit_game_title">Точно хочешь\nвыйти из игры?</string>
    <string name="exit_game_subtitle">Прогресс игры не сохранится</string>
    <string name="action_stay">Остаться</string>
    <string name="action_exit">Выйти из игры</string>
    <string name="settings_menu">Настройки</string>
    <string name="settings_minimum_one">Надо выбрать хотя бы один</string>
    <string name="int_language">Язык интерфейса</string>
    <string name="std_language">Изучаемый язык</string>
    <string name="std_groups">Изучаемые группы</string>
    <string name="show_all">Показать все</string>
    <string name="lang_level">Уровень языка</string>
    <string name="level_a1" translatable="false">A1</string>
    <string name="level_a2" translatable="false">A2</string>
    <string name="level_b1" translatable="false">B1</string>
    <string name="level_b2" translatable="false">B2</string>
    <string name="level_c1" translatable="false">C1</string>
    <string name="level_c2" translatable="false">C2</string>
    <string name="game_difficult">Сложность игры</string>
    <string name="difficulty_easy">Лёгкий</string>
    <string name="difficulty_medium">Средний</string>
    <string name="difficulty_hard">Сложный</string>
    <string name="difficulty_expert">Эксперт</string>
    <string name="difficulty_cart">Карточка</string>
    <string name="difficulty_easy_words">6 слов</string>
    <string name="difficulty_medium_words">12 слов</string>
    <string name="difficulty_hard_words">24 слова</string>
    <string name="difficulty_expert_words">32 слова</string>
    <string name="all_groups">Группы слов</string>
    <string name="user_groups">Мои группы:</string>
    <string name="global_groups">Стандартные группы</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="group_animals">Животные</string>
    <string name="group_food">Еда</string>
    <string name="group_family">Семья</string>
    <string name="group_clothes">Одежда</string>
    <string name="group_places">Места</string>
    <string name="group_time">Время</string>
    <string name="group_transport">Транспорт</string>
    <string name="group_work">Работа</string>
    <string name="group_house">Дом</string>
    <string name="group_education">Образование</string>
    <string name="group_nature">Природа</string>
    <string name="group_emotions">Эмоции</string>
    <string name="group_colors">Цвета</string>
    <string name="group_numbers">Числа</string>
    <string name="group_actions">Действия</string>
    <string name="group_objects">Предметы</string>
    <string name="group_abstract">Абстрактные понятия</string>
    <string name="group_entertainment">Развлечения</string>
    <string name="group_communication">Коммуникация</string>
    <string name="group_travel">Путешествия</string>
    <string name="group_health">Здоровье</string>
    <string name="group_adjectives">Прилагательные</string>
    <string name="group_adverbs">Наречия</string>
    <string name="group_pronouns">Местоимения</string>
    <string name="group_miscellaneous">Разное</string>
    <string name="group_body">Части тела</string>
    <string name="group_programming">Программирование</string>
    <string name="group_design">Дизайн</string>
    <string name="group_random">Случайно</string>
    <string name="group_unknown">Группа неизвестна</string>
    <string name="group_saved">Сохранённые слова</string>
    <string name="report_words">Где ошибка?</string>
    <string name="add_to_dictionary">Что сохраним?</string>
    <string name="report">Сообщить</string>
    <string name="add_all">Добавить все</string>
    <string name="done">Готово!</string>
    <string name="btn_clear_word">Удалить слово</string>
    <string name="btn_clear_letter">Удалить букву</string>
    <string name="btn_skip">Пропустить</string>
    <string name="btn_check">Проверить</string>
    <string name="btn_continue">Продолжим</string>
    <string name="score_in_game">Счёт</string>
    <string name="exit_button">Кнопка выхода</string>
    <string name="h1_my_level">Мой уровень:</string>
    <string name="h2_statistic">Статистика</string>
    <string name="tab_week">Неделя</string>
    <string name="tab_all_time">Всё время</string>
    <string name="h2_awards">Награды</string>
    <string name="awards_header">все</string>
    <string name="stats_words_learned">Слов пройдено</string>
    <string name="stats_categories_learned">Категорий выучено</string>
    <string name="stats_games_played">Игр сыграно</string>
    <string name="stats_scores">Очков набрано</string>
    <string name="my_awards">Мои награды</string>
    <string name="award_mammoth_hunter_title">Охотник на мамонтов</string>
    <string name="award_responsible_citizen_title">Ответственный гражданин</string>
    <string name="award_perfectionist_title">Перфекционист</string>
    <string name="award_almost_title">Ну почти</string>
    <string name="award_now_for_sure_title">Ну теперь точно</string>
    <string name="award_almost_expert_title">Почти эксперт</string>
    <string name="award_knowledge_collector_title">Коллекционер знаний</string>
    <string name="award_for_a_rainy_day_title">На чёрный день</string>
    <string name="award_maybe_useful_title">А вдруг пригодится</string>
    <string name="award_i_live_here_title">Я тут живу</string>
    <string name="award_little_but_regular_title">Чуть-чуть, но регулярно</string>
    <string name="award_lazy_panda_title">Ленивая панда</string>
    <string name="award_i_tried_title">Я старался</string>
    <string name="award_word_by_word_title">Слово за слово</string>
    <string name="award_honestly_title">Не идеально, но честно</string>
    <string name="award_slow_but_pretty_title">Медленно, зато красиво</string>
    <string name="award_self_improvement_title">Работа над собой</string>
    <string name="award_i_understood_title">Я понял, честно</string>
    <string name="award_learned_from_mistakes_title">Учёл прошлый опыт</string>
    <string name="award_figured_out_title">Разобрался</string>
    <string name="award_mammoth_hunter_desc">Выучил всех млекопитающих</string>
    <string name="award_responsible_citizen_desc">Сообщил об ошибке 10 раз</string>
    <string name="award_perfectionist_desc">Закрыл категорию на 100%</string>
    <string name="award_almost_desc">Закрыл категорию на 99%</string>
    <string name="award_now_for_sure_desc">Довёл категорию с 95–99% до 100%</string>
    <string name="award_almost_expert_desc">Закрыл 5 категорий минимум на 90%</string>
    <string name="award_knowledge_collector_desc">Открыл все слова в категории</string>
    <string name="award_for_a_rainy_day_desc">Добавил 50 слов в избранное</string>
    <string name="award_maybe_useful_desc">Добавил слово в избранное и ни разу к нему не вернулся</string>
    <string name="award_i_live_here_desc">Заходил в приложение 7 дней подряд</string>
    <string name="award_little_but_regular_desc">Учился 3 дня подряд меньше 5 минут</string>
    <string name="award_lazy_panda_desc">Сделал урок из 3 слов</string>
    <string name="award_i_tried_desc">Сделал урок и сразу вышел</string>
    <string name="award_word_by_word_desc">Выучил 100 слов</string>
    <string name="award_honestly_desc">Выучил слово со второй попытки</string>
    <string name="award_slow_but_pretty_desc">Отвечал правильно, но дольше обычного</string>
    <string name="award_self_improvement_desc">Исправил 10 ранее ошибочных слов</string>
    <string name="award_i_understood_desc">Ответил правильно после 3 ошибок</string>
    <string name="award_learned_from_mistakes_desc">Больше не ошибался в слове после его исправления</string>
    <string name="award_figured_out_desc">Закрыл все ошибки в одной категории</string>
    <string name="error_auth_declined">Ошибка авторизации </string>
    <string name="dictionary">Словарь</string>
    <string name="auth_dialog_title">Синхронизация</string>
    <string name="auth_dialog_message">Войдите через Google чтобы сохранять прогресс и словарь в облаке</string>
    <string name="auth_dialog_confirm">Войти</string>
    <string name="auth_dialog_decline">Не сейчас</string>
    <string name="dictionary_my_groups">Мои</string>
    <string name="dictionary_default_groups">Стандартные</string>
    <string name="sync_overlay_title">Синхронизация</string>
    <string name="sync_label_auth">Авторизация</string>
    <string name="sync_label_global_db">Глобальная база</string>
    <string name="sync_label_user_db">Личная база</string>
    <string name="sync_refresh">Обновить</string>
    <string name="create_group">Создать группу</string>
    <string name="new_group">Новая группа</string>
    <string name="new_word">Новое слово</string>
</resources>