<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_corner_r24"
    android:gravity="center"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/ivTilda"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:paddingTop="28dp"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_bottom_sheet_handle_bar" />

    <ImageView
        android:id="@+id/ivExitIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:paddingTop="28dp"
        android:scaleType="fitCenter"
        android:src="@drawable/pimi_game_exit" />
    <!-- Замените src на вашу картинку -->

    <!-- Текст 1: Заголовок -->
    <TextView
        android:id="@+id/tvExitTitle"
        style="@style/Text.H2.Simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/exit_game_title"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Текст 2: Описание -->
    <TextView
        android:id="@+id/tvExitDescription"
        style="@style/Text.T3.TextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exit_game_subtitle"
        android:textColor="@color/white" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStay"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="26dp"
        android:checkable="true"
        android:text="@string/action_stay"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/black_primary"
        android:textStyle="bold"
        app:rippleColor="@color/white"
        app:backgroundTint="@color/green_primary"
        app:cornerRadius="16dp" />

    <!-- Кнопка "Выйти" (Primary/Filled) -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExit"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="40dp"
        android:checkable="true"
        android:text="@string/action_exit"
        android:textAllCaps="false"
        app:rippleColor="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/selector_options_button_bg"
        app:cornerRadius="16dp" />


</LinearLayout>